--- a/index.html
+++ b/index.html
@@ -11,33 +11,19 @@
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
-    <title>SharpMC | Redeem a Voucher</title>
+    <title>SharpMC | Vote</title>
   </head>
   <body>
     <div class="container">
-      <div class="logout">Log Out</div>
       <div class="mid">
         <div class="hero">
-          <div class="title">Redeem a Voucher</div>
-          <div class="subtitle">First log in, then enter your voucher code to redeem it and get your rewards.</div>
-          <div class="form">
-            <div class="loginButton">Log In</div>
-            <div class="usernameForm">
-              <div class="textInput">
-                <input type="text" name="username" id="usernameInput" placeholder="Enter your Username" />
-                <label for="username">Invalid Username</label>
-              </div>
-              <button id="usernameSubmit">Log In</button>
-              <!-- <img src="https://minotar.net/helm/mfh_steve/600.png" id="usernameImage" /> -->
-            </div>
-            <div class="voucherForm">
-              <div class="textInput">
-                <input type="text" name="voucher" id="voucherInput" placeholder="Enter your Voucher Code" />
-                <label for="voucher">Invalid Voucher Code</label>
-              </div>
-              <button id="voucherSubmit"><span class="material-icons submitIcon">arrow_back</span></button>
-            </div>
-            <div class="voucherDetails"></div>
+          <img src="./assets/images/logos/logo.png" alt="" />
+          <div class="title">Vote for SharpMC</div>
+          <div class="subtitle">Click on each site to be redirected to our vote page. Type in your username and click "vote" to get rewards on SharpMC!<br /><br />Some sites will open in an embed below, and some will open in a new tab.</div>
+          <div class="links"></div>
+          <div class="frame hidden">
+            <div class="title" id="vote">Vote Here (Select Sites)</div>
+            <iframe src="" frameborder="0" width="1200" height="700"></iframe>
           </div>
         </div>
       </div>
@@ -45,7 +31,40 @@
 
     <!-- JQUERY -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="./scripts/login.js"></script>
-    <script src="./scripts/vouchers.js"></script>
+    <script>
+      let sites = [
+        { name: 'Top Minecraft Servers', url: 'https://topminecraftservers.org/vote/31505', frameCompatible: false },
+        { name: 'MInecraftServers.org', url: 'https://minecraftservers.org/vote/645343', frameCompatible: true },
+        { name: 'Planet Minecraft', url: 'https://www.planetminecraft.com/server/sharpmc/vote/', frameCompatible: false },
+        { name: 'Minecraft-MP', url: 'https://minecraft-mp.com/server/314172/vote/', frameCompatible: true },
+      ];
+
+      let divs = ``;
+
+      sites.forEach(site => {
+        divs += `<div class="link">
+              <span class="linkName">${site.frameCompatible ? site.name + ' (embed)' : site.name + ' (tab)'}</span>
+              <span class="linkURL" x-frame-compatible="${site.frameCompatible}"><a target="_blank" href="${site.url}">${site.url}</a></span>
+            </div>`;
+      });
+
+      document.querySelector('.links').innerHTML = divs;
+
+      document.querySelectorAll('.link').forEach(element =>
+        element.addEventListener('click', e => {
+          let child = e.target.children[1];
+
+          if (child.getAttribute('x-frame-compatible') === 'true') {
+            document.querySelector('.frame').classList.remove('hidden');
+            document.querySelector('.frame iframe').setAttribute('src', child.innerText);
+            // location.sc = '#vote';
+            window.scrollTo({ behavior: 'smooth', top: '1000' });
+          } else {
+            window.open(child.innerText, '_blank');
+            window.focus();
+          }
+        })
+      );
+    </script>
   </body>
 </html>
