--- a/index.html
+++ b/index.html
@@ -21,10 +21,6 @@
           <div class="title">Vote for SharpMC</div>
           <div class="subtitle">Click on each site to be redirected to our vote page. Type in your username and click "vote" to get rewards on SharpMC!<br /><br />Some sites will open in an embed below, and some will open in a new tab.</div>
           <div class="links"></div>
-          <div class="frame hidden">
-            <div class="title" id="vote">Vote Here (Select Sites)</div>
-            <iframe src="" frameborder="0" width="1200" height="700"></iframe>
-          </div>
         </div>
       </div>
     </div>
@@ -33,18 +29,18 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script>
       let sites = [
-        { name: 'Top Minecraft Servers', url: 'https://topminecraftservers.org/vote/31505', frameCompatible: false },
-        { name: 'MInecraftServers.org', url: 'https://minecraftservers.org/vote/645343', frameCompatible: true },
-        { name: 'Planet Minecraft', url: 'https://www.planetminecraft.com/server/sharpmc/vote/', frameCompatible: false },
-        { name: 'Minecraft-MP', url: 'https://minecraft-mp.com/server/314172/vote/', frameCompatible: true },
+        { name: 'Top Minecraft Servers', url: 'https://topminecraftservers.org/vote/31505' },
+        { name: 'MInecraftServers.org', url: 'https://minecraftservers.org/vote/645343' },
+        { name: 'Planet Minecraft', url: 'https://www.planetminecraft.com/server/sharpmc/vote/' },
+        { name: 'Minecraft-MP', url: 'https://minecraft-mp.com/server/314172/vote/' },
       ];
 
       let divs = ``;
 
       sites.forEach(site => {
         divs += `<div class="link">
-              <span class="linkName">${site.frameCompatible ? site.name + ' (embed)' : site.name + ' (tab)'}</span>
-              <span class="linkURL" x-frame-compatible="${site.frameCompatible}"><a target="_blank" href="${site.url}">${site.url}</a></span>
+              <span class="linkName">site.name}</span>
+              <span class="linkURL" ><a target="_blank" href="${site.url}">${site.url}</a></span>
             </div>`;
       });
 
@@ -54,15 +50,8 @@
         element.addEventListener('click', e => {
           let child = e.target.children[1];
 
-          if (child.getAttribute('x-frame-compatible') === 'true') {
-            document.querySelector('.frame').classList.remove('hidden');
-            document.querySelector('.frame iframe').setAttribute('src', child.innerText);
-            // location.sc = '#vote';
-            window.scrollTo({ behavior: 'smooth', top: '1000' });
-          } else {
-            window.open(child.innerText, '_blank');
-            window.focus();
-          }
+          window.open(child.innerText, '_blank');
+          window.focus();
         })
       );
     </script>
