--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
       sites.forEach(site => {
         divs += `<div class="link">
-              <span class="linkName">site.name}</span>
+              <span class="linkName">${site.name}</span>
               <span class="linkURL" ><a target="_blank" href="${site.url}">${site.url}</a></span>
             </div>`;
       });
