Take away all remnants of the frame

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="hero">
           <img src="./assets/images/logos/logo.png" alt="" />
           <div class="title">Vote for SharpMC</div>
-          <div class="subtitle">Click on each site to be redirected to our vote page. Type in your username and click "vote" to get rewards on SharpMC!<br /><br />Some sites will open in an embed below, and some will open in a new tab.</div>
+          <div class="subtitle">Click on each site to be redirected to our vote page. Type in your username and click "vote" to get rewards on SharpMC!</div>
           <div class="links"></div>
         </div>
       </div>
